fix: prod deployment and address UX concerns
